implemented comments;fixed some bugs; added a little css

--- a/views/main_resource.ejs
+++ b/views/main_resource.ejs
@@ -10,10 +10,9 @@
 
 <!-- App CSS -->
 
+<link rel="stylesheet" href="styles/mainresource.css" type="text/css" />
 
-<link rel="stylesheet" href="styles/main_resource.css" type="text/css" />
-
-<body>
+<body style="background-color: rgb(223, 223, 143)">
     <header>
       <%- include('partials/_header') %>
     </header>
