--- a/views/specific_user_resource.ejs
+++ b/views/specific_user_resource.ejs
@@ -13,7 +13,7 @@
 
 <link rel="stylesheet" href="styles/main_resource.css" type="text/css" />
 
-<body>
+<body  rgb(223, 223, 143)>
     <header>
       <%- include('partials/_header') %>
     </header>
