--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,16 +1,27 @@
 .index-page {
+  background-color: rgba(0, 153, 255, 0.548);
   display: flex;
   flex-direction: column;
   align-content: center;
 }
 
+
 .background-image {
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
   width: 100%;
-  height: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .about-page {
-  background-color: rgb(255, 187, 0);
+
   position: absolute;
   margin-top: 200px;
   height: 150px;
@@ -26,4 +37,21 @@
   margin-top: 40%;
   flex-direction: row;
   justify-content: space-around;
+}
+
+.btn-register {
+  background-color: powderblue;
+}
+
+.paragraph {
+  font-size: 5vw;
+}
+
+
+.middle-text {
+  font-size: 3vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
