--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,17 +25,21 @@
 
 <body>
   <div class='index-page'>
-    <img class='background-image'
-      src="https://i.picsum.photos/id/1002/4312/2868.jpg?hmac=5LlLE-NY9oMnmIQp7ms6IfdvSUQOzP_O3DPMWmyNxwo">
-
-    <p class="about-page">Candy tiramisu lollipop jelly dragée jujubes danish. Chocolate bar soufflé soufflé croissant I
-      love. Oat cake I love I love gummies candy canes liquorice ice cream. Candy tiramisu lollipop jelly dragée jujubes danish. Chocolate bar soufflé soufflé croissant I
-      love. Oat cake I love I love gummies candy canes liquorice ice cream.Candy tiramisu lollipop jelly dragée jujubes danish. Chocolate bar soufflé soufflé croissant I
-      love. Oat cake I love I love gummies candy canes liquorice ice cream.</p>
-    <div class="btn-register">
-      <a style = "border: 1px solid black" href = "/login">LOGIN HERE!</a>
-      <a style = "border: 1px solid black" href = "/resourcewall/register">CREATE ACCOUNT!</a>
+    <div class="container">
+      <img class='background-image'
+      src="https://helpdeskgeek.com/wp-content/pictures/2020/03/4k-wallpapers-desktop-best-sites-interfacelift.jpg.webp">
+      <div class="middle-text">
+          Welcome to the Resource Wall.
+          Wanna learn something new?
+          Want to save a collection of your favorite site?
+          Curate your own resource wall here!
+          <div class="btn-register">
+            <a style = "border: 1px solid black" href = "/login">LOGIN HERE!</a>
+            <a style = "border: 1px solid black" href = "/resourcewall/register">CREATE ACCOUNT!</a>
+          </div>
+      </div>
     </div>
+
   </div>
   <!-- <div>changes</div> -->
 
