--- a/views/specific_category_resource.ejs
+++ b/views/specific_category_resource.ejs
@@ -9,9 +9,9 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <!-- App CSS -->
-<!-- <link rel="stylesheet" href="styles/main_resource.css" type="text/css" /> -->
+<link rel="stylesheet" href="styles/mainresource.css" type="text/css" />
 
-<body>
+<body style="background-color:  rgb(223, 223, 143);">
 
     <header>
       <%- include('partials/_header') %>
@@ -32,8 +32,9 @@
         <% for(let x = 0; x < allResources.length ; x++){ %>
           <article class="resource" style ="padding: 20px">
             <div class="info">
-              <div>
+              <div class="title-resource">
                 <a class = "resourceTitleTag" href=<%= allResources[x].url %>> <%= allResources[x].title%></a>
+                <a class="btn btn-outline-success" href="/resources/<%= allResources[x].id %>">View Resource!</a>
               </div>
               <span class="name"><b>Creator: </b><%= allResources[x].username %><span>
                 <span class="rating"><b>  Avg Rating: </b><%= allResources[x].avg%></span>
